Integrate CICD pipeline with github actions

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cypress:run": "cypress run --e2e && cypress run --component",
+    "cy:open": "cypress open --e2e",
+    "cy:run": "cypress run --e2e",
+    "ct:open": "cypress open --component",
+    "ct:run": "cypress run --component",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
